[G2P-3267] Added OpenG2P-commons Helm Charts in to openg2p-deployment.

--- a/charts/openg2p-commons/Chart.yaml
+++ b/charts/openg2p-commons/Chart.yaml
@@ -57,6 +57,20 @@ dependencies:
 - name: mock-identity-system
   version: 0.9.4
   condition: mock-identity-system.enabled
+- name: odk-central
+  version: v2025.2.1
+  repository: https://openg2p.github.io/openg2p-helm
+  condition: odk-central.enabled
+- name: redis
+  alias: odk-central-enketo-redis-main
+  version: 19.6.4
+  repository: https://openg2p.github.io/openg2p-helm
+  condition: odk-central-enketo-redis-main.enabled
+- name: redis
+  alias: odk-central-enketo-redis-cache
+  version: 19.6.4
+  repository: https://openg2p.github.io/openg2p-helm
+  condition: odk-central-enketo-redis-cache.enabled
 icon: https://openg2p.github.io/openg2p-helm/openg2p-logo.png
 annotations:
   catalog.cattle.io/display-name: "OpenG2P Commons"
